// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Select multiple should display multi option 1`] = `
<body>
  <div
    portal-container=""
  >
    .c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: fixed;
  top: 72px;
  right: 10px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

<div
      style="position: fixed; top: 0px; left: 0px; z-index: 15;"
    >
      <div
        class="c0"
      />
    </div>
    .c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: fixed;
  right: 10px;
  bottom: 10px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

<div
      style="position: fixed; top: 0px; left: 0px; z-index: 30;"
    >
      <div
        class="c0"
      />
    </div>
  </div>
  .c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  -webkit-flex: auto;
  -ms-flex: auto;
  flex: auto;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  overflow: hidden;
}

.c4 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  line-height: 1;
  cursor: pointer;
  margin-left: 0.25rem;
}

.c4 svg {
  fill: #67758d;
  vertical-align: middle;
  pointer-events: none;
  -webkit-transition: all 200ms ease 0s;
  transition: all 200ms ease 0s;
}

.c4.c4.c4 svg {
  width: 16px;
  height: 16px;
}

.c6 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  line-height: 1;
  cursor: default;
}

.c6 svg {
  fill: #67758d;
  vertical-align: middle;
  pointer-events: none;
  -webkit-transition: all 200ms ease 0s;
  transition: all 200ms ease 0s;
}

.c6.c6.c6 svg {
  fill: #97a4ba;
  width: 24px;
  height: 24px;
}

.c5 {
  visibility: hidden;
  position: absolute;
  pointer-events: none;
}

.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  cursor: pointer;
}

.c3 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  max-width: 100%;
  margin-right: 8px;
  padding: 0 8px;
  border: 1px solid;
  border-radius: 0.25rem;
  border-color: #3990cd;
  background-color: #fbfbfd;
  color: #3990cd;
  font-size: 0.875rem;
  min-height: calc(2.25rem - 10px);
  margin-top: 2px;
  margin-bottom: 2px;
}

.c3 > span {
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c3 svg {
  fill: #a2d3ff;
}

.c3:hover svg {
  fill: #3990cd;
}

.c1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  max-width: 100%;
  border: 1px solid;
  border-radius: 0.25rem;
  border-color: #97a4ba;
  outline: none;
  background-color: #ffffff;
  color: #283040;
  line-height: 1.5;
  cursor: pointer;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  min-height: 2.25rem;
  padding: 2px 0.75rem;
  -webkit-transition: all 200ms ease 0s;
  transition: all 200ms ease 0s;
}

.c1:hover {
  border-color: #328ef5;
}

.c1 input {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  width: 100%;
  overflow: hidden;
  border: none;
  outline: none;
  background-color: transparent;
  text-overflow: ellipsis;
  pointer-events: none;
}

.c1 input::-webkit-input-placeholder {
  color: #97a4ba;
}

.c1 input::-moz-placeholder {
  color: #97a4ba;
}

.c1 input:-ms-input-placeholder {
  color: #97a4ba;
}

.c1 input::placeholder {
  color: #97a4ba;
}

.c1 input {
  font-size: 1rem;
}

<div>
    <div
      aria-expanded="false"
      aria-haspopup="listbox"
      aria-labelledby="downshift-4-label"
      class="c0"
      role="combobox"
      style="width: 360px;"
    >
      <div
        class="c1"
        data-testid="select"
        id="downshift-4"
      >
        <div
          class="c2"
          overflow="hidden"
        >
          <div
            class="c3"
            data-testid="select-selected-option-0"
          >
            Banana
            <i
              class="c4"
              cursor="pointer"
              data-testid="select-selected-option-0-clear-icon"
              size="16"
            >
              <svg
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                stroke-width="0"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
                />
              </svg>
            </i>
          </div>
          <div
            class="c3"
            data-testid="select-selected-option-1"
          >
            Orange
            <i
              class="c4"
              cursor="pointer"
              data-testid="select-selected-option-1-clear-icon"
              size="16"
            >
              <svg
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                stroke-width="0"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
                />
              </svg>
            </i>
          </div>
          <input
            aria-autocomplete="list"
            aria-labelledby="downshift-4-label"
            autocomplete="off"
            data-testid="select-input"
            id="downshift-4-input"
            placeholder=""
            style="width: 18px; box-sizing: content-box;"
            value=""
          />
          <span
            class="c5"
            style="font-size: 16px;"
          />
        </div>
        <i
          style="transform: rotate(180deg); flex: 0 0 auto; pointer-events: none; display: inline-flex;"
        >
          <i
            class="c6"
            cursor="default"
            fill="gray400"
            size="24"
          >
            <svg
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M7.41 15.41L12 10.83l4.59 4.58L18 14l-6-6-6 6z"
              />
            </svg>
          </i>
        </i>
      </div>
    </div>
  </div>
</body>
`;

exports[`Select should render correctly 1`] = `
.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  -webkit-flex: auto;
  -ms-flex: auto;
  flex: auto;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  overflow: hidden;
}

.c4 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  line-height: 1;
  cursor: default;
}

.c4 svg {
  fill: #67758d;
  vertical-align: middle;
  pointer-events: none;
  -webkit-transition: all 200ms ease 0s;
  transition: all 200ms ease 0s;
}

.c4.c4.c4 svg {
  fill: #97a4ba;
  width: 24px;
  height: 24px;
}

.c3 {
  visibility: hidden;
  position: absolute;
  pointer-events: none;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: fixed;
  right: 10px;
  bottom: 10px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: fixed;
  top: 72px;
  right: 10px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  cursor: pointer;
}

.c1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  max-width: 100%;
  border: 1px solid;
  border-radius: 0.25rem;
  border-color: #97a4ba;
  outline: none;
  background-color: #ffffff;
  color: #283040;
  line-height: 1.5;
  cursor: pointer;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  min-height: 2.25rem;
  padding: 4px 0.75rem;
  -webkit-transition: all 200ms ease 0s;
  transition: all 200ms ease 0s;
}

.c1:hover {
  border-color: #328ef5;
}

.c1 input {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  width: 100%;
  overflow: hidden;
  border: none;
  outline: none;
  background-color: transparent;
  text-overflow: ellipsis;
  pointer-events: none;
}

.c1 input::-webkit-input-placeholder {
  color: #97a4ba;
}

.c1 input::-moz-placeholder {
  color: #97a4ba;
}

.c1 input:-ms-input-placeholder {
  color: #97a4ba;
}

.c1 input::placeholder {
  color: #97a4ba;
}

.c1 input {
  font-size: 1rem;
}

<body>
  <div>
    <div
      aria-expanded="false"
      aria-haspopup="listbox"
      aria-labelledby="downshift-0-label"
      class="c0"
      role="combobox"
      style="width: 240px;"
    >
      <div
        class="c1"
        id="downshift-0"
      >
        <div
          class="c2"
          overflow="hidden"
        >
          <input
            aria-autocomplete="list"
            aria-labelledby="downshift-0-label"
            autocomplete="off"
            id="downshift-0-input"
            placeholder=""
            style="width: 18px; box-sizing: content-box;"
            value=""
          />
          <span
            class="c3"
            style="font-size: 16px;"
          />
        </div>
        <i
          style="transform: rotate(180deg); flex: 0 0 auto; pointer-events: none; display: inline-flex;"
        >
          <i
            class="c4"
            cursor="default"
            fill="gray400"
            size="24"
          >
            <svg
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M7.41 15.41L12 10.83l4.59 4.58L18 14l-6-6-6 6z"
              />
            </svg>
          </i>
        </i>
      </div>
    </div>
  </div>
  <div
    portal-container=""
  >
    <div
      style="position: fixed; top: 0px; left: 0px; z-index: 15;"
    >
      <div
        class="c5"
      />
    </div>
    <div
      style="position: fixed; top: 0px; left: 0px; z-index: 30;"
    >
      <div
        class="c6"
      />
    </div>
  </div>
</body>
`;
